[package]
name = "dxgi4py_rs"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
# windows-capture 封裝了 WGC 邏輯
windows-capture = { version = "1.5.0"}
# 用於高性能內存拷貝
piston-viewport = "1.0.2"

